image not saved  has been solved
