# src/swaggerOutput.json
@@ -3113,6 +3113,15 @@
             "type": "string",
             "example": "string"
           },
+          "images": {
+            "type": "array",
+            "example": [
+              "string"
+            ],
+            "items": {
+              "type": "string"
+            }
+          },
           "profile": {
             "type": "object",
             "properties": {
